refactor: Add package filtering, checkpoint 6
- Add package filtering.
- Add clear input icon.
- Add input focus when search icon is clicked.
- Add reset all settings functionality.
- CSS/style improvements.

--- a/gui/css/classes.css
+++ b/gui/css/classes.css
@@ -15,10 +15,10 @@
 }
 
 .center {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: center;
-	align-items: center;
+	display: flex !important;
+	flex-flow: row nowrap !important;
+	justify-content: center !important;
+	align-items: center !important;
 }
 
 .noselect {
