--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -213,7 +213,7 @@
 											id="action-clear-cache"
 											class="btn-action clear-cache left"
 										>
-											clear
+											Clear
 										</div>
 
 										<div class="divider"></div>
@@ -223,18 +223,18 @@
 											class="btn-action unselected"
 										>
 											<div class="icon-cont none">
-												<i class="fas fa-check"></i>
+												<i class="far fa-check"></i>
 											</div>
-											dynamic
+											Dynamic
 										</div>
 										<div
 											id="action-all"
 											class="btn-action unselected"
 										>
 											<div class="icon-cont none">
-												<i class="fas fa-check"></i>
+												<i class="far fa-check"></i>
 											</div>
-											all
+											All
 										</div>
 									</div>
 									<div class="left">
@@ -262,18 +262,18 @@
 											class="btn-action unselected"
 										>
 											<div class="icon-cont none">
-												<i class="fas fa-check"></i>
+												<i class="far fa-check"></i>
 											</div>
-											nim
+											Nim
 										</div>
 										<div
 											id="action-perl"
 											class="btn-action unselected"
 										>
 											<div class="icon-cont none">
-												<i class="fas fa-check"></i>
+												<i class="far fa-check"></i>
 											</div>
-											perl
+											Perl
 										</div>
 									</div>
 									<div class="left">
@@ -311,6 +311,10 @@
 										</div>
 									</div>
 								</div>
+							</div>
+
+							<div id="reset-settings" class="entry center reset">
+								<div class="label">Reset All</div>
 							</div>
 						</div>
 					</div>
@@ -364,6 +368,312 @@
 										</div>
 									</div>
 									<div class="right">
+										<div
+											id="search-spinner"
+											class="spinner none"
+										>
+											<svg
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												style="
+													margin: auto;
+													background: rgba(
+														255,
+														255,
+														255,
+														0
+													);
+													display: block;
+												"
+												width="50px"
+												height="50px"
+												viewBox="0 0 100 100"
+												preserveAspectRatio="xMidYMid"
+											>
+												<g transform="rotate(0 50 50)">
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.9166666666666666s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g transform="rotate(30 50 50)">
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.8333333333333334s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g transform="rotate(60 50 50)">
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.75s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g transform="rotate(90 50 50)">
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.6666666666666666s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(120 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.5833333333333334s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(150 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.5s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(180 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.4166666666666667s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(210 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.3333333333333333s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(240 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.25s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(270 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.16666666666666666s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(300 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="-0.08333333333333333s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+												<g
+													transform="rotate(330 50 50)"
+												>
+													<rect
+														x="47"
+														y="27"
+														rx="1.8"
+														ry="1.8"
+														width="6"
+														height="12"
+														fill="#999999"
+													>
+														<animate
+															attributeName="opacity"
+															values="1;0"
+															keyTimes="0;1"
+															dur="1s"
+															begin="0s"
+															repeatCount="indefinite"
+														></animate>
+													</rect>
+												</g>
+											</svg>
+										</div>
+
+										<div
+											id="search-loader"
+											class="search-loader none"
+										>
+											<svg
+												xmlns="http://www.w3.org/2000/svg"
+												width="50"
+												height="50"
+												viewBox="0 0 25 25"
+											>
+												<path
+													fill="#999999"
+													d="M25,5A20.14,20.14,0,0,1,45,22.88a2.51,2.51,0,0,0,2.49,2.26h0A2.52,2.52,0,0,0,50,22.33a25.14,25.14,0,0,0-50,0,2.52,2.52,0,0,0,2.5,2.81h0A2.51,2.51,0,0,0,5,22.88,20.14,20.14,0,0,1,25,5Z"
+												>
+													<animateTransform
+														attributeName="transform"
+														type="rotate"
+														from="0 25 25"
+														to="360 25 25"
+														dur="0.65s"
+														repeatCount="indefinite"
+													/>
+												</path>
+											</svg>
+										</div>
 										<div class="input-cont">
 											<div class="search-icon">
 												<i class="fas fa-search"></i>
@@ -373,6 +683,14 @@
 												class="header-input"
 												placeholder="Search..."
 											/>
+											<div
+												id="search-icon-clear"
+												class="search-icon-clear opa0 nointer"
+											>
+												<i
+													class="fas fa-times-circle"
+												></i>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -388,31 +706,31 @@
 							</div>
 							<div id="pkg-i-name" class="row">
 								<div class="label">Name:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-description" class="row">
 								<div class="label">Description:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-author" class="row">
 								<div class="label">Author:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-repository" class="row">
 								<div class="label">Repository:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-location" class="row">
 								<div class="label">Location:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-version" class="row">
 								<div class="label">Version:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 							<div id="pkg-i-license" class="row">
 								<div class="label">License:</div>
-								<div class="value"></div>
+								<div class="value">--</div>
 							</div>
 						</div>
 					</div>
@@ -443,8 +761,8 @@
 						<div class="top-cont">
 							<div class="left"></div>
 							<div class="right">
-								<div class="btn-w btn-update">clear log</div>
-								<div class="btn-b btn-update-b">update</div>
+								<div class="btn-w btn-update">Clear Log</div>
+								<div class="btn-b btn-update-b">Update</div>
 							</div>
 						</div>
 						<div class="bottom-cont">
@@ -458,8 +776,8 @@
 						<div class="top-cont">
 							<div class="left"></div>
 							<div class="right">
-								<div class="btn-w btn-update">clear log</div>
-								<div class="btn-b btn-update-b">run</div>
+								<div class="btn-w btn-update">Clear Log</div>
+								<div class="btn-b btn-update-b">Run</div>
 							</div>
 						</div>
 						<div class="bottom-cont">
