--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -329,7 +329,7 @@
 												id="main-toggle"
 												class="icon-cont"
 											>
-												<i class="fas fa-square"></i>
+												<i class="fal fa-square checkmark"></i>
 											</div>
 
 											<div class="label">Package</div>
