--- a/gui/css/overrides.css
+++ b/gui/css/overrides.css
@@ -1,5 +1,5 @@
 body {
-	/*font-size: 20px;*/
+	font-size: 20px;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
 		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 	zoom: 200%;
