--- a/gui/css/interfaces.css
+++ b/gui/css/interfaces.css
@@ -51,7 +51,8 @@
 
 .btn-w:active,
 .btn-b:active {
-	box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.3);
+	/*box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.3);*/
+	box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.3);
 	outline-width: 0;
 	outline: none;
 }
