--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -327,9 +327,11 @@
 										<div class="center">
 											<div
 												id="main-toggle"
-												class="icon-cont"
+												class="checkmark"
 											>
-												<i class="fal fa-square checkmark"></i>
+												<i
+													class="fas fa-check none"
+												></i>
 											</div>
 
 											<div class="label">Package</div>
